<resources>
    <!--    placeholders-->
    <string name="dummy_text">Dummy text</string>
    <string name="dummy_title">Dummy title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="big_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    </string>
    <!--    titles-->
    <string name="app_name">Habits tracker</string>
    <string name="about_title">About Habits tracker</string>
    <string name="detail_title">Habit detail</string>
    <string name="habits_list_title">Habits list</string>
    <!--    messages-->
    <string name="welcome_massage">Welcome to Habits tracker</string>
    <string name="about_message">This app created to helps you track you habits. You can add and track you bad and good habits</string>
    <string name="no_habit_title_err_message">Please enter habit name</string>
    <string name="no_habit_description_err_message">Please enter habit description</string>
    <string name="no_habit_allowed_executions_err_message">Please enter allowed executions</string>
    <string name="no_habit_days_period_err_message">Please enter days period</string>
    <string name="do_more_prefix_message">Well done! Do it </string>
    <string name="do_more_postfix_message"> more times</string>
    <string name="you_done_message">Well done! You did it!</string>
    <string name="can_do_it_more_prefix_message">You can do it </string>
    <string name="can_do_it_more_postfix_message"> more times</string>
    <string name="stop_doing_this_message">You already done you limit! Stop doing it!</string>
    <!--    text-->
    <string name="habit_title_text">Habit name</string>
    <string name="habit_description_text">Habit description</string>
    <string name="habit_type_text">Habit type</string>
    <string name="good_text">Good</string>
    <string name="bad_text">Bad</string>
    <string name="save_text">Save</string>
    <string name="start_text">Start</string>
    <string name="add_new_habit_text">Add new habit</string>
    <string name="priority_text">Priority</string>
    <string name="you_complete_the_habit_text">You complete the habit</string>
    <string name="allowed_frequency_text">Allowed frequency</string>
    <string name="times_in_text">Times in</string>
    <string name="pull_up_to_see_filters_text">Pull up to see filters</string>
    <string name="type_here_to_filter_by_name_text">Type here to find by name</string>
    <string name="type_here_to_find_in_description_text">Type here to find in description</string>
    <string name="sort_by_name_text">Sort by name</string>
    <string name="sort_by_add_order_text">Sort by add order</string>
    <string name="all_text">All</string>
    <string name="more_actions_text">More actions</string>
    <string name="habit_logo_text">Habit logo</string>
    <string name="edit_habit_text">Edit habit</string>
    <string name="delete_habit_text">Delete habit</string>
    <string name="days_text">Days</string>
    <string name="now_done_text">Now done</string>
    <string name="times_text">times</string>
    <!--    content descriptors-->
    <string name="logo_content_description">Logo</string>
    <string name="done_content_description">Done</string>
    <string name="no_habit_total_complete_times_err_message">Please enter how much you finished you habit</string>
    <!--    arrays-->
    <string-array name="priority_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>