<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/habit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/habit_title_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/habit_title_text"
        android:ems="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_title" />

    <TextView
        android:id="@+id/habit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_title_edit_text" />

    <EditText
        android:id="@+id/habit_description_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/habit_description_text"
        android:ems="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_description" />

    <TextView
        android:id="@+id/habit_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_description_edit_text" />

    <Spinner
        android:id="@+id/habit_priority_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/priority_values"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_priority" />

    <TextView
        android:id="@+id/habit_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habit_type_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_priority_spinner" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_type">

        <RadioButton
            android:id="@+id/is_good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/good_text" />

        <RadioButton
            android:id="@+id/is_bad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bad_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/habit_done_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_amount_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/habit_done_amount_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="number"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_done_amount" />

    <TextView
        android:id="@+id/habit_periodic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_done_amount_edit_text" />

    <EditText
        android:id="@+id/habit_periodic_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textPersonName"
        android:text="Раз в неделю"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_periodic" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>