<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeFragment">

    <ImageView
        android:id="@+id/home_logo_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/logo_big_size"
        android:layout_margin="@dimen/big_margin"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/logo_content_description"
        android:src="@drawable/ic_baseline_auto_graph_24"
        app:layout_constraintBottom_toTopOf="@+id/home_welcome_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/teal_700" />

    <TextView
        android:id="@+id/home_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/welcome_massage"
        app:layout_constraintBottom_toTopOf="@+id/home_start_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_logo_image" />

    <Button
        android:id="@+id/home_start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:layout_marginTop="60dp"
        android:text="@string/start_text"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_welcome_text" />
</androidx.constraintlayout.widget.ConstraintLayout>