<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_habit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:background="@drawable/rounded_corner_background"
    android:backgroundTint="@color/white"
    android:visibility="visible">

    <ImageView
        android:id="@+id/item_color_and_is_good"
        android:layout_width="@dimen/item_thumb_size"
        android:layout_height="@dimen/item_thumb_size"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/habit_logo_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_thumb_up_24"
        app:tint="#3A69DF" />

    <ImageView
        android:id="@+id/done_btn"
        android:layout_width="@dimen/item_thumb_size"
        android:layout_height="@dimen/item_thumb_size"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/rounded_corner_background"
        android:backgroundTint="@color/teal_200"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_color_and_is_good" />

    <ImageView
        android:id="@+id/more_btn"
        android:layout_width="@dimen/more_button_size"
        android:layout_height="@dimen/more_button_size"
        android:layout_margin="@dimen/default_margin"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_actions_text"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/more_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/item_color_and_is_good"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dummy_title" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/more_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/item_color_and_is_good"
        app:layout_constraintTop_toBottomOf="@+id/item_title"
        tools:text="@string/dummy_text" />

    <TextView
        android:id="@+id/item_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/item_color_and_is_good"
        app:layout_constraintTop_toBottomOf="@+id/item_description"
        tools:text="priority" />

    <TextView
        android:id="@+id/item_total_complete_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        tools:text="total_complete_times"
        app:layout_constraintStart_toEndOf="@+id/item_priority"
        app:layout_constraintTop_toBottomOf="@+id/item_description" />

    <TextView
        android:id="@+id/item_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@+id/item_color_and_is_good"
        app:layout_constraintTop_toBottomOf="@+id/item_priority"
        tools:text="periodical" />

    <TextView
        android:id="@+id/item_current_complete_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@+id/item_period"
        app:layout_constraintTop_toBottomOf="@+id/item_total_complete_times"
        tools:text="current_complete_times" />

    <!--TODO пока так потом, возможно переделать после теста-->
    <TextView
        android:id="@+id/done_dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:lines="1"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_color_and_is_good"
        app:layout_constraintTop_toBottomOf="@+id/item_period"
        tools:text="@string/big_text_placeholder" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/bright_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

